# django_ndr_core

./: .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  README_PYPI.md  TUTORIAL.md  docker-compose.yml  extract_pylint_score.py  info.json  manage.py  prepare_module.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: django.yml  pylint.yml  version-manage.yml
django_ndr_core/: asgi.py  settings.py  urls.py  wsgi.py
docs/: conf.py  index.rst  requirements.txt
docs/modules/: about-ndr-core.rst  admin-views.rst  administration-interface.rst  api-implementations.rst  filter-language.rst  how-to-get-started.rst  install-on-a-server.rst  sample-data-base.rst  sample-setup.rst  source-code-documentation.rst  what-is-ndr-core.rst
ndr_core/: __init__.py  admin.py  admin_forms.py  admin_tables.py  admin_views.py  api.py  api_factory.py  apps.py  exceptions.py  form_preview.py  forms.py  geo_ip_utils.py  map_test.py  models.py  ndr_helpers.py  ndr_settings.py  ndr_tag_replacer.py  ndr_template_tags.py  prog_stats.py  query.py  result.py  tables.py  tests.py  urls.py  utils.py  views.py  widgets.py
ndr_core/admin_forms/: admin_forms.py  api_forms.py  color_forms.py  corrections_forms.py  images_forms.py  messages_forms.py  page_forms.py  result_card_forms.py  result_field_forms.py  result_forms.py  sample_data_forms.py  search_config_forms.py  search_field_forms.py  search_form_forms.py  search_forms.py  settings_forms.py  translation_forms.py  ui_element_forms.py  ui_style_forms.py  upload_forms.py
ndr_core/admin_views/: admin_views.py  api_views.py  color_views.py  corrections_views.py  export_views.py  images_views.py  messages_views.py  page_views.py  result_views.py  sample_data_views.py  search_field_views.py  search_views.py  seo_views.py  settings_views.py  translation_views.py  ui_element_views.py  ui_style_views.py  uploads_views.py
ndr_core/api/: base_query.py  base_result.py
ndr_core/deployment/: LICENSE  MANIFEST.in  README.rst  setup.cfg
ndr_core/fixtures/: api_implementations.json  base_styles.json  color_palettes.json  company_instance.json  initial_values.json  person_instance.json  schemas.json
ndr_core/forms/: fields.py  forms_base.py  forms_contact.py  forms_manifest.py  forms_search.py  widgets.py
ndr_core/migrations/: 0001_initial.py  0002_alter_ndrcoreimage_unique_together_and_more.py  0002_alter_ndrcorepage_template_text.py  0002_alter_ndrcoresearchconfiguration_api_connection_url_and_more.py  0002_apiconfiguration_searchfield_and_more.py  0002_filterablelistconfiguration_list_name_and_more.py  0002_ndrcoreapiimplementation_description_and_more.py  0002_ndrcoreimage_citation_alter_ndrcoreimage_caption_and_more.py  0002_ndrcorepage_page_type_alter_ndrcorepage_view_name.py  0002_ndrcoreresulttemplatefield.py  0002_ndrcorevalue_is_user_value.py  0002_remove_ndrcoreuielement_link_element_and_more.py  0002_rename_ndrcoreresulttemplate_ndrcoreresultmapping_and_more.py  0003_alter_ndrcorepage_view_name.py  0003_alter_ndrcorevalue_is_user_value_and_more.py  0003_alter_ndrsearchfield_field_name_and_more.py  0003_ndrcorecolorscheme_ndrcoreuistyle_ndrcorrection_and_more.py  0003_ndrcorepage_last_modified_and_more.py  0003_ndrcoresearchstatisticentry_search_no_results_and_more.py  0003_ndrcorevalue_value_options_and_more.py  0003_usermessage_alter_ndrcoreapiconfiguration_api_port_and_more.py  0004_alter_searchfieldformconfiguration_field_column_and_more.py  0004_ndrcoreapiconfiguration_api_description.py  0004_ndrcoresearchfield_list_choices_and_more.py  0004_ndrcoreuielementitem_manifest_group_and_more.py  0004_ndrcoreuistyle_label_alter_ndrcoreuistyle_name.py  0004_ndrcoreusermessage_message_archived_and_more.py  0005_alter_ndrcoreresultfieldcardconfiguration_field_column_and_more.py  0005_ndrcorecolorscheme_scheme_label_and_more.py  0005_ndrcorepage_template_text_alter_ndrcorepage_name_and_more.py  0005_ndrcoreupload_alter_ndrcoreuielement_type.py  0005_remove_ndrcoreuielement_element_type_and_more.py  0006_ndrcoreapiconfiguration_api_repository_url_and_more.py  (+39 more)
tmp/: data.json
(+339 files in other folders)
