[metadata]
name = django-ndr-core
description = A Django app to search and view data from an API.
long_description = file: README_PYPI.md
long_description_content_type = text/markdown
url = https://django-ndr-core.readthedocs.io/en/latest/
author = Sorin Marti
author_email = sorin.marti@gmail.com
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Database
    Topic :: Database :: Front-Ends

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt