[metadata]
name = django-ndr-core
version = 0.0.1
description = A Django app to search and view data from an NDR data endpoint.
long_description = file: README.rst
url = http://ndrcore.org/
author = Sorin Marti
author_email = sorin.marti@gmail.com
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Database
    Topic :: Database :: Front-Ends

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.1
    Django>=4.1.7
    django-bootstrap4>=22.3
    django-crispy-forms>=2.0
    django-tables2>=2.5.3
    django_select2>=8.1.1
    django-ckeditor>=6.5.1
    django-recaptcha>=3.0.0
    django-colorfield>=0.8.0
    fontawesomefree>=6.3.0
    Pillow>=9.4.0
    geoip2>=4.6.0
    pymongo>=4.3
    crispy-bootstrap4>=2022.1